src/test/ui/issues/10000-19999/issue-12997-1.rs
// compile-flags: --test

//! Test that makes sure wrongly-typed bench functions aren't ignored

#![feature(test)]

#[bench]
fn foo() { } //~ ERROR functions used as benches

#[bench]
fn bar(x: isize, y: isize) { } //~ ERROR functions used as benches
